# Business_Chrun_Prediction

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements-serve.txt  requirements.txt  run_dashboard.bat
.github/workflows/: ci.yml
app/: dashboard.py
config/: config.yaml
data/processed/: churn_features.parquet
docs/: INTERVIEW_NOTES.md
models/: churn_model.joblib  model_meta.json
notebooks/: 01_sql_analysis.ipynb  02_eda.ipynb  03_statistics.ipynb  04_feature_audit.ipynb  05_modeling.ipynb  06_explainability_genai.ipynb
reports/: MODEL_CARD.md
src/: __init__.py
src/api/: main.py
src/data/: clean_data.py  load_data.py  schema.py
src/features/: build_features.py  spark_features.py
src/genai/: advisor.py
src/models/: explain.py  train.py
src/monitoring/: drift.py
src/pipelines/: flow.py
src/utils/: config.py
tests/: test_advisor.py  test_api.py  test_cleaning.py  test_data.py  test_features.py  test_model.py
